# Cafebot

cafebot/: CMakeLists.txt  cafe.pgm  cafe.yaml  package.xml  setup.cfg  setup.py
cafebot/config/: mapping.rviz  nav.rviz  nav2_params.yaml  new.rviz  slam.yaml
cafebot/launch/: bringup.launch.py  display.launch.py  gazebo.launch.py  map.launch.py  navigation.launch.py  rviz.launch.py  state_publisher.launch.py
cafebot/urdf/: cafebot.urdf
cafebot_description/: CMakeLists.txt  package.xml
